--- a/actions/templates/actions/action_detail.html
+++ b/actions/templates/actions/action_detail.html
@@ -32,8 +32,8 @@
         <h2>Commitment</h2>
         <p>
             You committed to complete this action by {{ progress.date_committed }}. 
-            (<a href="#" class="commit_trigger">Update</a> or 
-            <a href="{% url action_cancel action.slug %}" class="commit_cancel">Cancel</a>)
+            (<a href="#" class="commit_trigger">change date</a> or 
+            <a href="{% url action_cancel action.slug %}" class="commit_cancel">cancel</a>)
         </p>
     {% endif %}
     <h2>Action Tools</h2>
