--- a/actions/templates/actions/vampire_power/_slayer_method.html
+++ b/actions/templates/actions/vampire_power/_slayer_method.html
@@ -11,7 +11,7 @@
     </span>
 {% else %}
     <span class="slay_method">
-        <a href="#{{ vampire }}">Slay me</a>
+        <span class="slay_link"><a href="#{{ vampire }}">Slay me</a></span>
     </span>
     <span class="slay_link" style="display: none;">
         (<a href="#{{ vampire }}">change</a>)
