--- a/templates/base.html
+++ b/templates/base.html
@@ -22,36 +22,50 @@
     <body>
         <div id="loading" class="warning">Loading...</div>
         <div id="header_container">
-            <div id="header">
-                <a href="/" title="Repower America" id="header_logo"><img src="{% dated_static 'images/theme/logo.png' %}" alt="Repower at Home logo"/></a>
-                <div id="header-links">
-                    {% if user.is_authenticated %}
-                        {{ user }} | <a href="{% url rah.views.profile_edit user.id %}">Edit your profile</a> | <a href="{% url logout %}">Logout</a>
+			<div id="header_bg">
+	            <div id="header">
+	                <a href="/" title="Repower America" id="header_logo"><img src="{% dated_static 'images/theme/logo.png' %}" alt="Repower at Home logo"/></a>
+	                {# <div id="header-links"> #}
+	                {#     {% if user.is_authenticated %} #}
+	                {#         {{ user }} | <a href="{% url rah.views.profile_edit user.id %}">Edit your profile</a> | <a href="{% url logout %}">Logout</a> #}
+	                {#     {% else %} #}
+	                {#         <a href="{% url login %}?next={{ request.path }}">Login</a> | <a href="{% url register %}">Sign Up</a> #}
+	                {#     {% endif %} #}
+	                {#     | <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a> #}
+	                {#     {% if user.is_staff %} #}
+	                {#         | <a href="{% url admin_root '' %}">Admin</a> #}
+	                {#     {% endif %} #}
+	                {# </div> #}
+	                <form action="/search" id="cse_search_box">
+	                    <div>
+	                        <input type="hidden" name="cx" value="004464471324017850671:spsjawaq-zy" />
+	                        <input type="hidden" name="cof" value="FORID:10" />
+	                        <input type="hidden" name="ie" value="UTF-8" />
+	                        <input type="text" name="q" size="31" />
+	                        <input type="submit" name="sa" value="Search" />
+	                    </div>
+	                </form>
+	                {% if user.is_authenticated %}
+						<div id="nav_logged_in" class="nav">
+							<a href="{% url index %}" id="nav_welcome">Welcome</a>
+		                    <a href="{% url index %}" id="nav_home">Home</a>
+		                    <a href="{% url action_show %}" id="nav_actions">Actions</a>
+		                    <a href="{% url group_list %}" id="nav_community">Community</a>
+		                    <a href="{% url blog_index %}" id="nav_blog">Blog</a>
+							<a href="{% url rah.views.feedback %}" id="nav_feedback" class="feedback_link">Feedback</a>
+						</div>
                     {% else %}
-                        <a href="{% url login %}?next={{ request.path }}">Login</a> | <a href="{% url register %}">Sign Up</a>
+						<div id="nav_logged_out" class="nav">
+							<a href="{% url login %}" id="nav_login">Login</a>
+		                    <a href="{% url index %}" id="nav_home">Home</a>
+		                    <a href="{% url action_show %}" id="nav_actions">Actions</a>
+		                    <a href="{% url group_list %}" id="nav_community">Community</a>
+		                    <a href="{% url blog_index %}" id="nav_blog">Blog</a>
+							<a href="{% url register %}" id="nav_signup">Sign Up</a>
+						</div>
                     {% endif %}
-                    | <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a>
-                    {% if user.is_staff %}
-                        | <a href="{% url admin_root '' %}">Admin</a>
-                    {% endif %}
-                </div>
-                <form action="/search" id="cse_search_box">
-                    <div>
-                        <input type="hidden" name="cx" value="004464471324017850671:spsjawaq-zy" />
-                        <input type="hidden" name="cof" value="FORID:10" />
-                        <input type="hidden" name="ie" value="UTF-8" />
-                        <input type="text" name="q" size="31" />
-                        <input type="submit" name="sa" value="Search" />
-                    </div>
-                </form>
-                <div id="nav">
-                    <a href="{% url index %}">Home</a> |
-                    <a href="{% url action_show %}">Actions</a> |
-                    <a href="{% url group_list %}">Groups</a> |
-                    <a href="{% url blog_index %}">Blog</a>
-                    {# <a href="">About us</a> #}
-                </div>
-            </div>
+	            </div>
+			</div>
         </div>
         <div id="content_container">
 	        <div id="message_box">
