--- a/actions/templates/actions/vampire_power/_plan.html
+++ b/actions/templates/actions/vampire_power/_plan.html
@@ -1,5 +1,8 @@
 <h3>My plan of attack</h3>
-<p>Total plan savings: $<span id="vampire_savings_total">0</span> annually</p>
+<p>
+    Total plan savings:
+    $<span id="vampire_savings_total">{{ vampire_worksheet_form.total_savings }}</span> annually
+</p>
 
 <table>
     <thead>
