--- a/actions/templates/actions/vampire_power/_get_started.html
+++ b/actions/templates/actions/vampire_power/_get_started.html
@@ -1,2 +1,7 @@
-<img src="some_image.jpg" alt="some big image" />
+<h2>Do you have any of these?</h2>
+<img src="{{ MEDIA_URL }}images/theme/vampire_power/get_started.png" alt="getting started" />
+<p>
+    These are some of the thirstiest vampires in your home. Make a plan <br/>
+    to reduce vampire power and you could save up to $200 this year.
+</p>
 <a id="get_started" href="#">Get Started</a>
