updated action messages per Jills email "Web notifications, round 1"
----
Change the text on the undo button to “Wait – I’m still working on this action.”
The text response would up top would be “No worries. We’ve updated the record.
Let us know when you’re finished with this action.”

Change the text on the action done button to “I completed this action!”
The text up top would read “Nice work! We’ve updated your profile, so all your friends
can see your progress. (Undo)”

Under “Who’s doing this?” on the action page, get rid of “has completed this” or
“has committed to this” after the user name. It’s repetitive since we already say X people
have completed this action. This eliminates the lolcat problem of “You has completed...”
Also, maybe we should just display their profile pic, instead of just their names?

--- a/actions/templates/actions/action_detail.html
+++ b/actions/templates/actions/action_detail.html
@@ -50,10 +50,10 @@
     {% if action.users_completed %}
         <ul class="whos_working">
             {% for user in users_completed %}
-                <li>{% safe_user_link user %} has completed this.</li>
+                <li>{% safe_user_link user %}</li>
             {% endfor %}
             {% if noshow_users_completed > 0 %}
-                {{ noshow_users_completed }} additional user{{ noshow_users_completed|pluralize:" has,s have" }} completed this.
+                {{ noshow_users_completed }} additional user{{ noshow_users_completed|pluralize }}
             {% endif %}
         </ul>
     {% endif %}
@@ -61,10 +61,10 @@
     {% if action.users_committed %}
         <ul class="whos_working">
             {% for user in users_committed %}
-                <li>{% safe_user_link user %} has committed to this.</li>
+                <li>{% safe_user_link user %}</li>
             {% endfor %}
             {% if noshow_users_committed > 0 %}
-                {{ noshow_users_committed }} additional user{{ noshow_users_committed|pluralize:" has,s have" }} committed to this.
+                {{ noshow_users_committed }} additional user{{ noshow_users_committed|pluralize }}
             {% endif %}
         </ul>
     {% endif %}
