--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,7 +50,8 @@ blockquote, q {
 body {
     font: 15px/22px Arial, Times, 'Times New Roman', serif;
     color: #000;
-    background: #B6DAF0 url(../images/theme/bg_page.jpg) no-repeat top center;
+/*    background: #B6DAF0 url(../images/theme/bg_page.jpg) no-repeat top center;*/
+    background-color: #B3D7F2;
 }
 
 /** Elements **/
@@ -191,15 +192,21 @@ ul{
 	position:relative;		
 }
 #header, #content, #footer{
-	width:1000px;
-	margin:0 auto;
-	position:relative;
+  position:relative;
 }
 #content_container {
-	min-height:587px;
-	background: url(../images/theme/bg_content.png) no-repeat bottom center;
+	background: url(../images/theme/content_container.png) repeat-x top center;
 }
-#major_col {
+#content_bg {
+    background: transparent url(../images/theme/content_bg.jpg) no-repeat top center;
+}
+#content {
+    min-height:600px;
+    padding-bottom:200px;
+    background: transparent url(../images/theme/content.png) no-repeat bottom center;
+}
+
+/*#major_col {
     width: 680px;
     padding:24px;
     background-color:#FFF;
@@ -210,16 +217,16 @@ ul{
     position:absolute;
     padding-top:24px;
     width: 250px;
-}
+}*/
 
 /** Header **/
 #header_bg{
-    height:119px;
+    height:114px;
     width:100%;
-	background: url(../images/theme/bg_header.png) no-repeat top center;
+	background: url(../images/theme/header_bg.png) no-repeat top center;
 }
 #header_container{
-	background: url(../images/theme/bg_header_repeat.png) repeat-x top center;
+	background: url(../images/theme/header_container.png) repeat-x top center;
 }
 #header_logo {
 	position:absolute;
@@ -264,7 +271,6 @@ ul{
 #nav_feedback{width:117px; background: url(../images/theme/nav_sprite.png) -1083px 92px;}
 #nav_feedback:hover{background-position: -1083px 46px;}
 
-
 #nav_logged_out a, #nav_logged_in a{color:#a8ce61; display:block; height:46px; float:left;}
 #nav_logged_out a:hover, #nav_logged_in a:hover{color:#90b54b;}
 
@@ -276,15 +282,13 @@ ul{
 
 /** Footer **/
 #footer_container{
-	height:354px;
-	background: url(../images/theme/bg_footer.png) no-repeat bottom center;
+	height:286px;
+    background: #92c139 url(../images/theme/footer.png) no-repeat top center;
 }
 
 #footer_copy {
     margin-right:100px;
-    padding-top:120px;
     font-size: 11px;
-    
 }
 #footer_copy p{
     color:#FFF;
@@ -293,8 +297,6 @@ ul{
 
 /* Breadcrumbs */
 #breadcrumbs {font-size:12px; margin-bottom:20px;}
-
-
 
 .spacer { clear: both; }
 .atom_link { margin-left: 5px; }
@@ -474,6 +476,68 @@ th.headerSortUp, th.headerSortDown {
 .flagged_flag_form { margin-left: 10px; }
 .flag_submit_link { font-size: smaller; }
 /* @end */
+
+
+/*
+Variable Grid System.
+Learn more ~ http://www.spry-soft.com/grids/
+Based on 960 Grid System - http://960.gs/
+Licensed under GPL and MIT.
+*/
+/* Containers */
+.container_4 { margin-left: auto; margin-right: auto; width: 1000px;}
+/* Grid >> Global */
+.grid_1,
+.grid_2,
+.grid_3,
+.grid_4 {
+	display:inline;
+	float: left;
+	position: relative;
+	margin-left: 5px;
+	margin-right: 5px;
+}
+/* Grid >> Children (Alpha ~ First, Omega ~ Last) */
+.alpha {margin-left: 0;}
+.omega {margin-right: 0;}
+
+/* Grid >> 4 Columns*/
+.container_4 .grid_1 {width:240px;}
+.container_4 .grid_2 {width:490px;}
+.container_4 .grid_3 {width:740px;}
+.container_4 .grid_4 {width:990px;}
+
+/* Prefix Extra Space >> 4 Columns*/
+.container_4 .prefix_1 {padding-left:250px;}
+.container_4 .prefix_2 {padding-left:500px;}
+.container_4 .prefix_3 {padding-left:750px;}
+
+/* Suffix Extra Space >> 4 Columns */
+.container_4 .suffix_1 {padding-right:250px;}
+.container_4 .suffix_2 {padding-right:500px;}
+.container_4 .suffix_3 {padding-right:750px;}
+
+/* Push Space >> 4 Columns */
+.container_4 .push_1 {left:250px;}
+.container_4 .push_2 {left:500px;}
+.container_4 .push_3 {left:750px;}
+
+/* Pull Space >> 4 Columns */
+.container_4 .pull_1 {left:-250px;}
+.container_4 .pull_2 {left:-500px;}
+.container_4 .pull_3 {left:-750px;}
+
+/* 
+Clear Floated Elements
+http://sonspring.com/journal/clearing-floats 
+http://perishablepress.com/press/2008/02/05/lessons-learned-concerning-the-clearfix-css-hack 
+*/
+.clear { clear: both; display: block; overflow: hidden; visibility: hidden; width: 0; height: 0;}
+.clearfix:after {clear: both; content: ' '; display: block; font-size: 0; line-height: 0; visibility: hidden; width: 0; height: 0;}
+.clearfix {display: inline-block;}
+* html .clearfix {height: 1%;}
+.clearfix {display: block;}
+
 /*
 * jQuery UI CSS Framework
 * Copyright (c) 2009 AUTHORS.txt (http://jqueryui.com/about)
