--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <div id="loading" class="warning">Loading...</div>
         <div id="header_container">
 			<div id="header_bg">
-	            <div id="header">
+	            <div id="header" class="container_4">
 	                <a href="/" title="Repower America" id="header_logo"><img src="{% dated_static 'images/theme/logo.png' %}" alt="Repower at Home logo"/></a>
 	                {# <div id="header-links"> #}
 	                {#     {% if user.is_authenticated %} #}
@@ -68,25 +68,23 @@
 			</div>
         </div>
         <div id="content_container">
-	        <div id="message_box">
-	            {% include '_messages.html' %}            
-	        </div>
-			<div id="content">
-	            <div id="major_col">
-	                {% block content %}{% endblock %}
-	            </div>
-	            <div id="minor_col">
-	                {% block minorcol %}{% endblock %}
-	            </div>				
+			<div id="content_bg">
+		        <div id="message_box">
+		            {% include '_messages.html' %}            
+		        </div>
+				<div id="content">
+		            <div class="container_4">
+		                {% block content %}{% endblock %}
+						{% block minorcol %}{% endblock %}
+		            </div>
+				</div>
 			</div>
         </div>
         <div id="footer_container">
             <div id="footer">
 				<div id="footer_copy">
 					<p>
-	                    Copyright &copy; The Alliance for Climate Protection 2010. All Rights Reserved.
-	                </p>
-	                <p>
+	                    Copyright &copy; The Alliance for Climate Protection 2010. All Rights Reserved.<br/>
 	                    <a href="http://www.climateprotect.org/">The Alliance for Climate Protection</a> | 
 	                    <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a> | 
 	                    <a href="{% url terms_of_use %}">Terms of Use</a> | 
