--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -3,10 +3,23 @@
     Welcome
 {% endblock %}
 {% block content %}
-    <img src="/static/images/wireframe/homepage_logged_out.png" width="680"/>
-{% endblock %}
-{% block minorcol %}
+<div class="grid_3 alpha">
+	<img src="/static/images/rich_actions/vampire/large.png" width="740" height="402"/>
+	<div class="clear"></div> 
+	<div class="grid_1 alpha">
+		<img src="/static/images/index/home_make_a_plan.png" width="240" height="147"/>
+	</div>
+	<div class="grid_1">
+		<img src="/static/images/index/home_save_energy.png" width="240" height="147"/>		
+	</div>
+	<div class="grid_1 omega">
+		<img src="/static/images/index/home_take_the_lead.png" width="240" height="149"/>
+	</div>
+</div>
+<div class="grid_1 omega">
 	<h2>Get started</h2>
 	<p>Gain full access to Repower at Home's features. It's free!</p>
 	<p><a href="{% url register %}" title="">Create your account</a></p>
+</div>
+<div class="clear"></div>
 {% endblock %}
