--- a/static/css/style.css
+++ b/static/css/style.css
@@ -165,6 +165,55 @@ ul{
     padding: 10px;
 }
 
+/* @group form styling */
+input {
+    font-family: "superclarendon-1", "superclarendon-2", serif;
+    font-weight: 700;
+    font-style: normal;
+    margin-top: 20px;
+}
+.overset {
+    position: relative;
+}
+.overset input {
+    width: 330px;
+    height: 16px;
+    border: 1px #A1D3E4 solid;
+    padding: 11px;
+    font-size: 16px;
+    color: #84CBD6;
+    background: url(../images/theme/input_text_background.png) repeat-x;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+}
+.overset input.error {
+    color: #DE6060;
+    background: url(../images/theme/input_text_error_background.png) repeat-x;
+}
+.overset label {
+    display: block;
+    font-family: helvetica;
+    font-size: 12px;
+    color: #C1C1C1;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.overset label.inside {
+    font-family: "superclarendon-1", "superclarendon-2", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 16px;
+    color: #84CBD6;
+    top: 31px;
+    left: 11px;
+}
+
+.hidden {
+    display: none;
+}
+/* @end */
+
 /* Messages */
 #message_box { text-align: center; margin-left: auto; margin-right: auto; width:1000px;}
 #message_box ul { list-style-type: none; }
