--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -2,10 +2,13 @@
 {% block content %}
 <h1>Create an account</h1>
 <form action="" method="post" id="registration_form">
-    <div>
-        {{ form.as_p }}          
-        <input type="submit" value="Register"/>
-    </div>
+    {% for field in form %}
+        <p class="overset">
+            {{ field.label_tag }}
+            {{ field }}
+        </p>
+    {% endfor %}
+    <p><input type="submit" value="Register"/></p>
     {% csrf_token %}
 </form>
 <a href="{% url django.contrib.auth.views.login %}">Log in</a> | 
