js error messages will now display directly below the overset fields

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -209,6 +209,13 @@ input {
     left: 11px;
 }
 
+.overset label.error {
+    color: #DE6060;;
+    position: absolute;
+    top: 60px;
+    background-color: transparent;
+}
+
 .hidden {
     display: none;
 }
