--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,9 +1,9 @@
 {% extends "rah/base.html" %}
 {% block content %}
-    <form id="password_change_form" action="" method="post">
-        {{form.as_p}}
-        <input type="submit" value="Submit" />
-        <input type="hidden" name="next" value="{{ next|escape }}" />
+    <form id="password_change_form" action="" method="post" autocomplete="false">
+        {% include "rah/_overset_form.html" %}
+        <p><input type="submit" value="Submit" /></p>
+        <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
         {% csrf_token %}
     </form>
 {% endblock %}
