--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,9 +1,9 @@
 {% extends "rah/base.html" %}
 {% block content %}
     {% if form %}
-        <form id="password_reset_confirm" action="" method="post">
-            {{form.as_p}}
-            <input type="submit" value="Reset password" />
+        <form id="password_reset_confirm" action="" method="post" autocomplete="false">
+            {% include "rah/_overset_form.html" %}
+            <p><input type="submit" value="Reset password" /></p>
             {% csrf_token %}
         </form>
     {% else %}
