--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,8 +1,8 @@
 {% extends "rah/base.html" %}
 {% block content %}
-<form action="" method="post">
-    {{form.as_p}}
-    <input type="submit" value="Reset password" />
+<form action="" method="post" autocomplete="false">
+    {% include "rah/_overset_form.html" %}
+    <p><input type="submit" value="Reset password" /></p>
     {% csrf_token %}
 </form>
 <a href="{% url django.contrib.auth.views.login %}">Log in</a> | 
