--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -16,16 +16,32 @@
                     <a id="link_with_twitter" href="{% url twitter_oauth_auth %}">Link your account with twitter</a>
                 {% endif %}
             </p>
-            <form id="profile_edit_form" action="" method="post">
-                {{account_form.as_p}}
-                {{profile_form.as_p}}
+            <form id="profile_edit_form" action="" method="post" autocomplete="false">
+                {% with account_form as form %}
+                    {% include "rah/_overset_form.html" %}
+                {% endwith %}
+                {% with profile_form as form %}
+                    {% include "rah/_overset_form.html" %}
+                {% endwith %}
                 <p><input type="submit" name="edit_account" value="Save profile" /></p>
                 {% csrf_token %}
             </form>
         </div>
         <div id="notifications_tab">
-            <form id="group_notifications_form" action="" method="post">
-                {{ group_notification_form.as_p }}
+            <form id="group_notifications_form" action="" method="post" autocomplete="false">
+                {% for field in group_notification_form %}
+                    <div class="overset {% if field.errors %}error{% endif %}">
+                        {{ field.label_tag }}
+                        {{ field }}
+                        {% if field.errors %}
+                            <label class="error" for="{{ field.auto_id }}">
+                                {% for error in field.errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </label>
+                        {% endif %}
+                    </div>
+                {% endfor %}
                 <p><input type="submit" name="edit_group_notifications" value="Save notifications" /></p>
                 {% csrf_token %}
             </form>
