--- a/actions/templates/actions/vampire_power/_get_started.html
+++ b/actions/templates/actions/vampire_power/_get_started.html
@@ -4,4 +4,4 @@
     These are some of the thirstiest vampires in your home. Make a plan <br/>
     to reduce vampire power and you could save up to $200 this year.
 </p>
-<a id="get_started" href="#">Get Started</a>
+<a id="get_started" class="button" href="#">Get Started</a>
