--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -2,7 +2,7 @@
 {% block content %}
     <form id="group_form" action="" method="post" enctype="multipart/form-data">
         {% include "groups/_group_form.html" %}
-        <p><input type="submit" value="Create Group"></input></p>
+        <p><input type="submit" value="Create Group" /></p>
         {% csrf_token %}
     </form>
 {% endblock %}
