--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,14 +166,10 @@ ul{
 }
 
 /* @group form styling */
-input, select {
+input, select, textarea {
     font-family: "superclarendon-1", "superclarendon-2", serif;
     font-weight: 700;
     font-style: normal;
-    margin-top: 20px;
-}
-form li label {
-    position: relative;
 }
 form ul {
     list-style-type: none;
@@ -181,32 +177,49 @@ form ul {
 form input[type="checkbox"] {
     width: 15px;
 }
-
-.overset {
-    position: relative;
+a.button:hover {
+    color: white;
 }
-.overset input {
-    width: 330px;
-    height: 16px;
+
+.form_row {
+    position: relative;
+    padding: 20px 0 25px 0;
+    width: 320px;
+}
+
+.form_row input, .form_row textarea {
+    width: 100%;
     border: 1px #A1D3E4 solid;
     padding: 11px;
     font-size: 16px;
     color: #84CBD6;
-    background: url(../images/theme/input_text_background.png) repeat-x;
+    background: #fff url(../images/theme/input_text_background.png) repeat-x;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
 }
-.overset input[type="checkbox"] {
+.form_row li label {
+    position: relative;
+}
+.form_row li input {
+    width: inherit;
+}
+.form_row input {
+    height: 16px;
+}
+.form_row input[type="file"] {
+    height: 25px;
+}
+.form_row input[type="checkbox"] {
     width: 15px;
 }
-.overset[class~="error"] {
+.form_row[class~="error"] {
     background: transparent;
 }
-.overset input.error, .overset[class~="error"] input {
+.form_row input.error, .form_row[class~="error"] input {
     color: #DE6060;
     background: url(../images/theme/input_text_error_background.png) repeat-x;
 }
-.overset label {
+.form_row label {
     display: block;
     font-family: helvetica;
     font-size: 12px;
@@ -214,6 +227,9 @@ form input[type="checkbox"] {
     position: absolute;
     top: 0;
     left: 0;
+}
+.overset {
+    padding: 20px 0 25px 0;
 }
 .overset label.inside {
     font-family: "superclarendon-1", "superclarendon-2", serif;
@@ -440,17 +456,22 @@ form input[type="checkbox"] {
 .whos_working { margin-left: 25px; font-size: 0.9em; }
 
 /* @group groups */
+#group_slug_wrapper {
+    position: relative;
+}
+#group_slug_domain {
+    font-family: helvetica;
+    font-size: 12px;
+    color: #C1C1C1;
+    position: absolute;
+    top: 31px;
+    left: 0;
+}
+#group_slug_address { 
+    margin-left: 150px;
+    width: 170px; 
+}
 .group_section { margin-bottom: 20px; }
-
-#group_form { margin-top: 30px; }
-
-#group_form .form_row { margin-bottom: 15px; }
-      
-#group_form label { font-weight: bold; font-size: 0.9em; }
-      
-#group_form .help_text { font-size: 0.8em; color: #636363; }
-      
-#group_form ul { list-style-type: none; color: #373637; margin-left: 10px; }
 
 .group_parent { font-size: 0.7em; }
 
@@ -495,10 +516,22 @@ th.headerSortUp, th.headerSortDown {
 /* @end */
 
 /* @group Search Widget */
-.search_widget .search_value { width: 190px; }
-
-.search_widget .search_results { border: 2px solid #515151; overflow: auto; width: 250px; height: 250px; margin-top: 5px; padding: 5px; }
-
+.search_fields {
+    width: 100%;
+}
+.search_widget .search_value { 
+    width: 39%;
+}
+.search_widget .search_results { 
+    border: 2px solid #A1D3E4; 
+    overflow: auto; 
+    width: 100%; 
+    height: 250px; 
+    margin-top: 5px; 
+    padding: 5px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+}
 .search_widget li { list-style: none; display: block; margin-bottom: 10px; }
 
 /* @end */
@@ -570,16 +603,6 @@ ul.vampire_worksheet_wizard_nav li .active {
     font-size: 0.7em;
     font-weight: bold;
     color: #92C139;
-}
-
-#vampire_worksheet_wizard #get_started {
-    font-size: 2.0em;
-    font-weight: bold;
-    padding: 10px;
-    border: 2px solid black;
-    background-color: #92C139;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;   
 }
 
 #vampire_worksheet_wizard .vampire_device_image {
