--- a/actions/templates/actions/_action_nugget.html
+++ b/actions/templates/actions/_action_nugget.html
@@ -1,10 +1,12 @@
 <div class="action_nugget">
-    <span class="points">{{ action.points }} Points</span>
-    <a class="title" href="{% url action_detail action.slug %}">{{ action.name }}</a>
-    <span class="tag_list">
+	<a href="{% url action_detail action.slug %}"><img src="/static/images/theme/action_nugget_ill.jpg"></a>
+	<span class="action_nugget_points">{{ action.points }} Points</span>
+    <h3 class="action_nugget_title"><a href="{% url action_detail action.slug %}">{{ action.name }}</a></h3>
+    <div class="action_nugget_teaser">{{ action.teaser|safe|linebreaks }}</div>
+	<a class="action_nugget_learn_more" href="{% url action_detail action.slug %}">&rsaquo; Learn more</a>
+    <div class="action_nugget_tags">
         {% for tag in action.tags %}
             <a class="tag" href="{% url action_tag tag %}">{{ tag.name|deslug }}</a>
         {% endfor %}
-    </span>
-    <div class="teaser">{{ action.teaser|safe|linebreaks }}</div>
+    </div>
 </div>
